tests/golden/gitops-aws/platform-backup/Namespace__cluster__ahorro-pr.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: ahorro-pr
